v12/fixtures/ast/errors/alias_reexport_method_ambiguity/alias_b.able
package alias_reexport_method_ambiguity_b

import alias_reexport_method_ambiguity_base.{Widget}

private type Local = Widget

methods Local {
  fn tag(self: Self) -> String { "b" }
}
